# octreeRenderer

./: .gitignore  CMakeLists.txt  COPYING  FindGLEW.cmake  FindOpenCL.cmake  README  build.py  change_permissions.sh
data/: cube.mtl  sphere.mtl
src/: CMakeLists.txt  CMakeSources.cmake  Coalesce.frag  Context.h  DataManager.cpp  DataManager.h  Device.cpp  Device.h  DeviceInfo.cpp  DeviceInfo.h  DeviceManager.cpp  DeviceManager.h  GeometryOctreeWindow.cpp  GeometryOctreeWindow.h  Image.cpp  NoTransform.vert  OctreeRendererWindow.cpp  OctreeRendererWindow.h  OctreeWindow.cpp  OctreeWindow.h  OpenCLContext.cpp  OpenCLContext.h  OpenCLExtra.h  OpenCLUtils.cpp  OpenCLUtils.h  ProgramState.cpp  ProgramState.h  RenderInfo.h  SourceFile.cpp  SourceFile.h  SourceFileManager.cpp  SourceFileManager.h  Window.cpp  Window.h  geometryToOctree.cpp  main.cpp  octreeRenderer.cpp
src/Base/: CMakeLists.txt  CMakeSources.cmake  Context.h  Device.cpp  Device.h  SizeMacros.h
src/CUDA/: CMakeLists.txt  CMakeSources.cmake  CUDAContext.cpp  CUDAContext.h  CUDADevice.cu  CUDADevice.h  CUDADeviceInfo.cpp  CUDADeviceInfo.h  CUDAIncludes.h  CUDAMath.cuh  CUDARenderInfo.cpp  CUDARenderInfo.h  CUDAUtils.cpp  CUDAUtils.h
src/Common/: Bin.cpp  CMakeLists.txt  CMakeSources.cmake  DebugUtils.cpp  DebugUtils.h  HighResTimer.cpp  HighResTimer.h  Image.cpp  Image.h  SourceFile.cpp  SourceFile.h  SourceFileManager.cpp  SourceFileManager.h
src/Graphics/: CMakeLists.txt  CMakeSources.cmake  FramebufferWindow.h  GLUtils.cpp  GLUtils.h  Graphics.h  Material.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Surface.h  Texture.cpp  Texture.h
src/Graphics/CGL/: Header.h
src/Graphics/Cocoa/: CocoaGLContext.mm  CocoaGLSurface.h  CocoaGLSurface.mm  GLView.h  GLView.mm
src/IO/: BinReader.cpp  BinReader.h  BinWriter.cpp  BinWriter.h  CMakeLists.txt  CMakeSources.cmake  IOUtils.cpp  IOUtils.h  MTLFileReader.cpp  MTLFileReader.h  OBJFileReader.cpp  OBJFileReader.h  PNGReader.cpp  PNGReader.h  Path.cpp  Path.h  RenderInfoReader.cpp  RenderInfoReader.h  RenderInfoWriter.cpp  RenderInfoWriter.h
src/Math/: AABox.cpp  AABox.h  BasicTypes.h  CMakeLists.txt  CMakeSources.cmake  Line.h  MathUtil.h  Matrix.h  Matrix4x4.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Rect.h  RenderInfo.h  Triangle.cpp  Triangle.h  Vector.h  Vector2.h  Vector3.h  Vector4.h  Vertex.h
src/Octree/: Attributes.cpp  Attributes.h  Bin.h  CMakeLists.txt  CMakeSources.cmake  ConceteOctree.cpp  ConcreteOctree.h  ConcreteOctreeNode.cpp  ConcreteOctreeNode.h  Octree.cpp  Octree.h  OctreeCreator.cpp  OctreeCreator.h  OctreeHeader.cpp  OctreeHeader.h  OctreeNode.cpp  OctreeNode.h  OctreeReader.cpp  OctreeReader.h  OctreeSegment.cpp  OctreeSegment.h  OctreeStruct.h  OctreeWriter.cpp  OctreeWriter.h
src/OpenCL/: CLIncludes.h  CMakeLists.txt  CMakeSources.cmake  OpenCLContext.cpp  OpenCLContext.h  OpenCLDevice.cpp  OpenCLDevice.h  OpenCLDeviceInfo.cpp  OpenCLDeviceInfo.h  OpenCLGLDevice.cpp  OpenCLGLDevice.h  OpenCLPlatform.cpp  OpenCLPlatform.h  OpenCLPlatformInfo.cpp  OpenCLPlatformInfo.h  OpenCLProgram.cpp  OpenCLProgram.h  OpenCLRenderInfo.cpp  OpenCLRenderInfo.h  OpenCLUtils.cpp  OpenCLUtils.h  OpenClPlatformInfo.h  RayTracing.cl
src/OpenMP/: CMakeLists.txt  CMakeSources.cmake  OpenMPContext.cpp  OpenMPContext.h  OpenMPDevice.cpp  OpenMPDevice.h
src/Serial/: CMakeLists.txt  CMakeSources.cmake  SerialContext.cpp  SerialContext.h  SerialDevice.cpp  SerialDevice.h  SerialDeviceInfo.cpp  SerialDeviceInfo.h
src/Test/: CMakeLists.txt  CMakeSources.cmake  TestContext.cpp  TestContext.h  TestDevice.cpp  TestDevice.h  TestDeviceInfo.cpp  TestDeviceInfo.h
